# h2ssscam

./: .gitignore  .readthedocs.yaml  README.md  cass_test.py  pyproject.toml  requirements.txt
docs/: conf.py  h2ssscam.rst  index.rst
h2ssscam/: h2_model.py  h2_model_funcs.py  main.py  pyproject.toml
h2ssscam/models/: h2-fluor-model_R=100000_TH2=500_NH2=20_THI=30000_NHI=21.npz
src/h2ssscam/: BaseCalc.py  Constants.py  Spectrum.py  __init__.py  __main__.py  constants.py  core.py  create_config_file.py  data_loader.py  funcs.py  helpers.py  old_constants.txt  plotting_funcs.py
src/h2ssscam/data/: config.ini  h2fluor_data_Abgrall+1993.npz  hi_data_NIST.npz
src/h2ssscam/models/: h2-fluor-model_R=100000_TH2=500_NH2=20_THI=30000_NHI=21.npz
tests/: test_BaseCalc.py  test_data_loader.py
tests/data/: load_data_expected.pkl
